--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">QIWI</string>
+    <string name="onSubscribe_UIData"><![CDATA[Observer<List<Element>> метод onSubscribe(Disposable d) вызван]]></string>
+    <string name="onNext_UIData"><![CDATA[Observer<List<Element>> метод onNext(List<Element> elements) вызван]]></string>
+    <string name="onComplete_UIData"><![CDATA[Observer<List<Element>> метод onComplete() вызван]]></string>
 </resources>
